adapting buyOperation of necessities of business