@@ -5,7 +5,9 @@ import dev.julioperez.littleTree.box.domain.model.CurrencyMultiBox;
 import dev.julioperez.littleTree.box.domain.port.getCurrencyMultibox.GetCurrencyMultibox;
 import dev.julioperez.littleTree.box.domain.port.getCurrencyMultibox.GetCurrencyMultiboxOutputPort;
 
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class GetCurrencyMultiboxService implements GetCurrencyMultibox {
 
@@ -18,7 +20,7 @@ public class GetCurrencyMultiboxService implements GetCurrencyMultibox {
     @Override
     public List<CurrencyMultiboxToList> getCurrencyMultiboxToListByName(String name) {
         List<CurrencyMultiBox> currencyMultiboxByName = getCurrencyMultiboxOutputPort.getCurrencyMultiboxByName(name);
-        return currencyMultiboxByName.stream().map(this::mapCurrencyMultiboxToList).toList();
+        return currencyMultiboxByName.stream().map(this::mapCurrencyMultiboxToList).sorted(Comparator.comparing(CurrencyMultiboxToList::updatedAt).reversed()).collect(Collectors.toList());
     }
     private CurrencyMultiboxToList mapCurrencyMultiboxToList(CurrencyMultiBox currencyMultiBox){
         return new CurrencyMultiboxToList(
